Tamplate name update

--- a/Template/home/index.html
+++ b/Template/home/index.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-    {% include 'Home/carousel.html' with carouselData=carousels %}
+    {% include 'home/carousel.html' with carouselData=carousels %}
     <!-- with carouselData(Variable) =carousels (context Key) its come form view.py -->
 
     <!--================================== About Section  ============================================ -->
