--- a/Template/base.html
+++ b/Template/base.html
@@ -16,13 +16,13 @@
         </title>
     </head>
     <body>
-        {% include "Home/navbar.html" %}
+        {% include "home/navbar.html" %}
         <!-- with carousel =carousels its come form view.py -->
 
         {% block content %}
 
         {% endblock %}
-        {% include "Home/footer.html" with footerData=footers %}
+        {% include "home/footer.html" with footerData=footers %}
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
