--- a/Template/home/index.html
+++ b/Template/home/index.html
@@ -23,8 +23,8 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="aboutImageBody ">
-                            <img class="aboutImage" src="{{ about.image.url }}">
+                        <div class="center">
+                            <img class="img-thumbnail aboutImage" src="{{ about.image.url }}">
                         </div>
                     </div>
                 {% endfor %}
