--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,8 @@
+*{
+    font-family:"tlc3d-nhp2";
+    text-transform:none;
+}
+
 /* ------------------------- About Section  ------------------------------ */
 .aboutSection02 {
 	background: rgba(187, 187, 187, 0.21);
@@ -41,15 +46,14 @@
     padding-top: 10px;
 }
 .aboutImage {
-    width: 70vh;
-    border: 1px dotted black;
-    padding: 5px;
-    border-radius: 10px;
-    margin: 23px 71px;
+	width: auto;
+	margin-top: 50px !important;
+	padding: 15px !important;
+	border: none;
+	border-radius: 50px;
+	margin-bottom: 35px;
 }
-.aboutImageBody {
-	margin: 50px 0px 30px 0;
-}
+
 
 .read_bt {
     width: 175px;
